# ratatoskr

./: .air.toml  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  deno.json  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.test.yml  docker-compose.yml  go.mod  go.sum  handler.go  main.go  main.ts  publish_container.sh
.github/workflows/: docker-publish.yml  docker.yml  go.yml  rust.yml
capabilities/: chatgpt.go  linkprocessor.go  notion.go  types.go
caps/: chatgpt.go  linkprocessor.go  memorydump.go  memorywipe.go  notion.go  shared.go  shared_test.go  testredis.go
client/: openai.go  webreader.go  webreader_test.go
clients/: notion.go  notion_test.go  openai.go  webreader.go  webreader_test.go
cmd/ratatoskr/: main.go
deploy/: docker-compose.yml
docs/: logo.png.xmp
handler/: handler.go
internal/capabilities/: chat.go  image_generator.go  invitation.go  invitor.go  prompt.txt  say.go  song_search.go  test.go
internal/config/: config.go
internal/layers/: memory.go  security.go  selector.go
internal/logger/: logger.go
internal/services/: longTermMemory.go
internal/utils/: tokenize_test.go
layers/: capability_selector.go  capability_selector_test.go  memory.go  memory_test.go  security.go  types.go
pkg/capabilities/: chatgpt.go  linkprocessor.go  memorydump.go  memorywipe.go  shared.go  test.go  testredis.go
pkg/caps/: memorywipe.go  notion.go
pkg/client/: notion.go  openai.go  webreader.go
pkg/clients/: chat.go  chroma.go  embeddings.go
pkg/handler/: handler.go
pkg/layers/: capability_selector.go  (+4 more)
repos/: message.go  message_test.go
repositories/: message.go  message_test.go
scripts/: README.md  consume.sh  produce.sh  produce_with_buttons.sh  ratatoskr.service  setup_env.sh  show_topics.sh  simple_produce.sh  simulate_callback.sh  test_direct_produce.sh  test_full_flow.sh  ultra_simple_test.sh
src/: handler.rs  kafka_processing.rs  main.rs  message_types.rs  structs.rs  telegram_handlers.rs  utils.rs
types/: types.go
utils/: tokenize.go  tokenize_test.go
(+51 files in other folders)
