[package]
name = "ratatoskr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
pretty_env_logger = "0.4"
tokio = { version = "1.8", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = "0.11.18"
async-trait = "0.1.68"
regex = "1.8.1"
chrono = "0.4.26"
sha2 = "0.10.8"
tracing = "0.1"
tracing-subscriber = "0.3.18"
scraper = "0.19.0"
rumqttc = "0.24.0"
rmp-serde = "1.1.2"
anyhow = "1.0.83"
base64 = "0.22.1"

[profile.release]
lto = false
codegen-units = 2
