[package]
name = "ratatoskr"
version = "0.1.0"
edition = "2024"

[dependencies]
teloxide = { version = "0.15", features = ["macros"] }
tokio = { version = "1.45", features = ["full"] }
rdkafka = { version = "0.37", features = ["tokio"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-stream = "0.1"
futures-util = "0.3"

# Vendor Openssl becuase linux 
openssl = { version = "0.10", features = ["vendored"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
